--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
     background: linear-gradient(135deg, var(--primary), #6aa9f9);
     padding: 1rem 1rem 0 1rem;
     color: white;
-    position: fixed;
+    position: sticky;
     width: 100%;
     text-align: center;
 }
