--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,8 @@ footer .support-email {
     position: relative;
     width: 100%;
     height: 90vh;
-    background-image: url('../images/FgEn.png');
-    background-size: cover;
+    background-image: url('../images/foreground.png');
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     justify-content: center;
@@ -273,5 +273,13 @@ footer .support-email {
 @media (max-width: 600px) {
     .features {
         flex-direction: column;
+    }
+}
+
+@media (max-width: 600px) {
+    .hero h1 {
+        font-size: 2.2rem;
+        line-height: 1.3;
+        padding: 0 1rem;
     }
 }
