--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,8 @@ footer .support-email {
     width: 100%;
     height: 90vh;
     background-image: url('../images/foreground.png');
-    background-size: contain;
-    background-position: center;
+    background-size: cover;
+    background-position: top center;
     background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
