--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@
     --accent: #f5f5f5;
 }
 
+
+
 html, body {
+    overflow-x: hidden;
+    max-width: 100%;
     height: 100%;
     margin: 0;
     display: flex;
@@ -20,7 +24,7 @@ body {
 
 header {
     background: linear-gradient(135deg, var(--primary), #6aa9f9);
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem 0 0 0;
     color: white;
     position: sticky;
     width: 100%;
@@ -70,7 +74,8 @@ header p {
 nav {
     width: 100%;
     background: var(--primary);
-    padding: 0.5rem 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -244,7 +249,7 @@ footer .support-email {
     padding: 0;
     position: relative;
     width: 100%;
-    height: 90vh;
+    height: 70vh;
     background-image: url('../images/foreground.png');
     background-size: cover;
     background-position: top center;
